# muai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  HANDOFF.md  README_READY_SUBTYPES.txt  READY_SUBTYPES_FINAL_SUMMARY.txt  READY_SUBTYPES_IMPLEMENTATION.md  READY_SUBTYPES_QUERIES.sql  READY_SUBTYPES_QUICKSTART.md  READY_SUBTYPES_SCHEMA_DESIGN.md  READY_SUBTYPES_SUMMARY.md  READY_SUBTYPES_TEST_REPORT.md  READY_SUBTYPES_VERIFICATION_RESULTS.txt  VERA.md  analyze_stepan.py  audit_full.py  audit_stepan_chats.py  backfill_links.py  docker-compose.yml  persona.md  requirements.txt  test_ready_subtypes_integration.py
.claude/: settings.json  settings.local.json
.scratch/: brain_check.py  brain_instr.py  check_event477.py  dump_recent.py  eva_events.py  eva_full.py  eva_full_log.py  eva_today.py  find_dups.py  find_eva.py  find_misapply.py  find_tasks.py  find_tasks2.py  graph_audit.py  inspect_event.py  load_self_doc.py  patch_filters.py  patch_filters2.py  patch_filters3.py  probe_group.py  purge_self_doc.py
alembic/: env.py
app/: config.py  main.py
cloudflare/: _worker.js
dashboard/: index.html
docs/: ARCHITECTURE.md  SELF_EXTENSION.md  TELEGRAM_MCP.md  vera-architecture-explained.html  vera3-tz.md
executor_bot/: Dockerfile  config.py  forwarder.py  handlers.py  main.py  requirements.txt  sender.py
nginx/: tg-mcp.conf  tgbot.conf  vera.conf
scripts/: auth_step1.py  auth_step2.py  auth_userbot.py  deploy.sh  learning_loop.py  list_chats.py  wipe_for_v3.py
shared/: pyproject.toml
shared/vera_shared/: crypto.py  internal_auth.py
shared/vera_shared/base_bot/: bot.py  server.py  task.py
shared/vera_shared/db/: engine.py  migrations.py  models.py
shared/vera_shared/llm/: __init__.py  cost_guard.py  json_parse.py  registry.py  router.py
shared/vera_shared/media/: multimodal.py
shared/vera_shared/providers/: anthropic.py  base.py  deepseek.py  gemini.py  pricing.py  registry.py  voyage.py
shared/vera_shared/registry/: client.py  model.py  repository.py
shared/vera_shared/sources/: __init__.py  filters.py
shared/vera_shared/tokens/: model.py  pool.py  repository.py  selector.py
shared/vera_shared/tools/: spec.py
static/: api.js  app.css  app.js  index.html
tests/: test_router_mapping.py
vera-coder/: Dockerfile  requirements.txt
vera-core/: Dockerfile  pytest.ini  requirements.txt
vera-git/: Dockerfile  requirements.txt
vera3/services/bot-telegram/: Dockerfile  pyproject.toml
vera3/services/bot-telegram/src/bot_telegram/: bot.py
vera3/services/dashboard/: Dockerfile  pyproject.toml
vera3/services/dashboard/src/dashboard/: app.py  auth.py  gmail_oauth.py
vera3/services/gateway/: Dockerfile  pyproject.toml
vera3/services/gateway/src/gateway/: __init__.py  app.py  claude.py  config.py  events.py
vera3/services/ingestor-instagram/: Dockerfile  pyproject.toml
vera3/services/ingestor-instagram/src/ingestor_instagram/: __main__.py
vera3/services/ingestor-telegram/: Dockerfile  pyproject.toml
vera3/services/ingestor-telegram/src/ingestor_telegram/: backfill.py  backfill_worker.py  entity_sync.py  sync_projects.py  tools_http.py  userbot.py
vera3/services/media-worker/: Dockerfile  pyproject.toml
vera3/services/media-worker/src/media_worker/: __main__.py
vera3/shared/: pyproject.toml
vera3/shared/vera_shared/: __init__.py  control.py  crypto.py
vera3/shared/vera_shared/connectors/: __init__.py  base.py
vera3/shared/vera_shared/db/: __init__.py  engine.py  models.py  models_graph.py  models_sources.py
vera3/shared/vera_shared/events/: __init__.py  schema.py
vera3/shared/vera_shared/graph/: __init__.py  dedup.py  rel_extract.py  repo.py
vera3/shared/vera_shared/llm/: __init__.py  broker_client.py  client.py  cost_guard.py  registry.py  routing.py
vera3/shared/vera_shared/projects/: rules.py
vera3/shared/vera_shared/sources/: __init__.py  base.py
vera3/shared/vera_shared/style/: __init__.py  applier.py  profile.py
vera3/shared/vera_shared/tokens/: __init__.py  crypto.py  model.py  repository.py
vera3/shared/vera_shared/tools/: __init__.py  base.py  http_client.py  registry.py
(+405 files in other folders)
