[project]
name = "vera-shared"
version = "0.3.1"
description = "Shared library for Vera 3.0 services"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "structlog>=24.1",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "hypothesis>=6.99",
    "mypy>=1.8",
    "ruff>=0.3",
    "black>=24.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vera_shared"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests/unit", "../tests/service"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "S", "RUF"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
