[project]
name = "vera-bot-telegram"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
    "vera-shared",
    "aiogram>=3.4",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot_telegram"]
