[project]
name = "vera-dashboard"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = ["vera-shared", "fastapi>=0.110", "uvicorn[standard]>=0.27", "jinja2>=3.1", "httpx>=0.27", "python-multipart>=0.0.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]
