[project]
name = "vera-gateway"
version = "0.3.0"
description = "Vera 3.0 — public-facing gateway for source webhooks + admin API"
requires-python = ">=3.12"
dependencies = [
    "vera-shared",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",  # для form upload (archive importer)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",  # для TestClient
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]
