[project]
name = "ingestor-instagram"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "instagrapi>=2.0",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "cryptography>=42",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
