[project]
name = "vera-ingestor-telegram"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
    "vera-shared",
    "telethon>=1.36",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestor_telegram"]
