[project]
name = "media-worker"
version = "0.1.0"
description = "Recognize photo (vision) and voice/audio (whisper) for Vera media events"
requires-python = ">=3.12"
dependencies = [
  "vera-shared",
  "httpx>=0.27",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
]

[tool.setuptools.packages.find]
where = ["src"]
